src/main/kotlin/com/example/moiza/global/error/exception/BusinessException.kt
package com.example.moiza.global.error.exception

abstract class BusinessException(
    val errorCode: ErrorCode
): RuntimeException()